--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Labowebs - Sitios Web para Pequeñas Empresas</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
+
 <body>
     <!-- Autor: Adrián Fernánde Díaz -->
     <header>
@@ -14,8 +16,10 @@
     </header>
 
     <section class="about">
+
         <h2>¿Quiénes Somos?</h2>
-        <p>En Labowebs nos especializamos en el diseño y desarrollo de sitios web adaptados a las necesidades de pequeñas empresas, brindando soluciones accesibles, atractivas y funcionales.</p>
+        <p>En Labowebs nos especializamos en el diseño y desarrollo de sitios web adaptados a las necesidades de
+            pequeñas empresas, brindando soluciones accesibles, atractivas y funcionales.</p>
 
         <h2>Nuestros Servicios</h2>
         <ul>
@@ -25,7 +29,16 @@
             <li>Soporte y mantenimiento continuo</li>
         </ul>
 
-        </section>
+    </section>
+    <h2>Conoce a Nuestro Equipo</h2>
+    <p>Labowebs está formado por un equipo de diseñadores y
+        desarrolladores apasionados que trabajan juntos para ofrecer soluciones
+        tecnológicas de alta calidad. Cada miembro de nuestro equipo aporta
+        experiencia en diseño, programación, y soporte técnico, asegurando que
+        nuestros clientes reciban un servicio completo y personalizado.</p>
+    <p>Nuestro objetivo es que cada cliente se sienta acompañado en su
+        aventura digital, con un equipo profesional que entiende sus necesidades y
+        trabaja para hacer crecer su presencia en línea.</p>
 
     <footer>
         <p>© 2024 Labowebs - Gijón, Asturias</p>
@@ -34,5 +47,5 @@
         </nav>
     </footer>
 </body>
-</html>
 
+</html>
