--- a/contacto.html
+++ b/contacto.html
@@ -31,6 +31,7 @@
 
 
     <footer>
+        <p>© 2024 Labowebs - Gijón, Asturias</p>
         <nav>
             <a href="index.html">Inicio</a> | <a href="contacto.html">Contacto</a>
         </nav>
